[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"
authors = ["Michael Scholten <michael-scholten@hotmail.nl>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial",
    "stdio", "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1 = 0x20 | 1 = 0x21 = 2 * 16 + 1 = 33
test-timeout = 300 # seconds

[[test]]
name = "should_panic"
harness = false

# Turn off the stack harnass as execution can't continue after a double fault caused by this test
[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = "0.9"
volatile = "0.3"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10.4"
pc-keyboard = "0.5.0"
